# SignalProcessorCpp

./: .clang-format  .clang-tidy  .gitignore  .prettierrc  CLASSES.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  SECURITY.md  _build_cmake_make.bat  _build_make.bat  _clean.bat  _clean_build_cmake_make.bat  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/AmplitudeDetector/: AmplitudeDetector.cpp  AmplitudeDetectorOutput.txt
examples/FrequencyAnalyzer/: FrequencyAnalyzer.cpp
src/: CMakeLists.txt
src/analysis/: TAmplitudeDetector.cpp  TAmplitudeDetector.h  TCorrelator.cpp  TCorrelator.h  TFourierTransform.cpp  TFourierTransform.h
src/core/: TCore.h  TCore.hpp  TDerivative.cpp  TDerivative.h  TGenerator.cpp  TGenerator.h  TIntegral.cpp  TIntegral.h  TMultiplier.cpp  TMultiplier.h  TSignalLine.cpp  TSignalLine.h  TSignalLine.hpp  TSummator.cpp  TSummator.h
src/io/: TFileWriter.cpp  TFileWriter.h  TFileWriter.hpp  TGnuPlotViewer.cpp  TGnuPlotViewer.h  TGnuPlotViewer.hpp  TPathManager.h  TPathManager.hpp
src/proc/: TAmplitudeDetector.cpp  TAmplitudeDetector.h  TAmplitudeDetector.hpp  TCorrelator.cpp  TCorrelator.hpp  TDifferentiator.cpp  TDifferentiator.h  TDifferentiator.hpp  TFrequencyAnalyzer.cpp  TFrequencyAnalyzer.hpp  TIntegrator.cpp  TIntegrator.h  TIntegrator.hpp  TMultiplier.cpp  TMultiplier.h  TMultiplier.hpp  TRMS.cpp  TRMS.hpp  TSummator.cpp  TSummator.h  TSummator.hpp
